--- a/styles/App.css
+++ b/styles/App.css
@@ -3,17 +3,9 @@
   background-color: rgb(20, 20, 20);
   text-align: center;
   overflow: hidden;
+  font-family: 'Courier New', Courier, monospace;
 }
 
-.container {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding: 0 30px 0 30px;
-  color: white;
-  position: relative;
-}
 
 .authed-container {
   height: 100%;
@@ -22,48 +14,12 @@
   padding: 30px;
 }
 
-.header {
-  margin: 0;
-  font-size: 50px;
-  font-weight: bold;
-}
-
-.sub-text {
-  font-size: 25px;
-}
 
 .gradient-text {
   background: -webkit-linear-gradient(left, #60c657 30%, #35aee2 60%);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-}
-
-.button-container{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 20px;
-  
-}
-.cta-button {
-  height: 45px;
-  border: 0;
-  width: auto;
-  padding-left: 40px;
-  padding-right: 40px;
-  border-radius: 10px;
-  cursor: pointer;
-  font-size: 16px;
-  font-weight: bold;
-}
-
-.connect-wallet-button {
-  color: white;
-  background: -webkit-linear-gradient(left, #ff8867, #ff52ff);
-  background-size: 200% 200%;
-  animation: gradient-animation 4s ease infinite;
-  max-width: 300px;
 }
 
 .mint-button {
@@ -83,28 +39,6 @@ button:disabled {
   height: 100px;
 }
 
-.footer-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  bottom: 0 px;
-  width: 100%;
-  bottom: 0;
-  left: 0;
-  padding-bottom: 20px;
-}
-
-.twitter-logo {
-  width: 35px;
-  height: 35px;
-}
-
-.footer-text {
-  font-size: 16px;
-  font-weight: bold;
-  color: white;
-}
 
 .connected-container input[type='text'] {
   display: inline-block;
@@ -133,15 +67,6 @@ button:disabled {
   cursor: pointer;
 }
 
-.download-button {
-  border: none;
-  background-color: #4664ff;
-  color: #fff;
-  font-size: 16px;
-  border-radius: 3px;
-  padding: 8px 16px;
-  cursor: pointer;
-}
 
 .create-product-button{
   margin: 10px;
